# jguides_2024

./: .gitignore  pyproject.toml
reliability_paper_2024_figs/: edfig1.py  edfig2.py  edfig8.py  edfig9.py  fig1.py  fig2_edfig3.py  fig3_edfig4.py  fig4_edfig6_edfig7.py  fig5.py  population_reliability_plot_helpers.py
src/jguides_2024/datajoint_nwb_utils/: _get_datajoint_table.py  analysis_default_params.py  datajoint_analysis_helpers.py  datajoint_check_well_defined.py  datajoint_covariate_firing_rate_vector_decode_table_base.py  datajoint_covariate_firing_rate_vector_table_base.py  datajoint_cross_validation_table_helpers.py  datajoint_fr_table_helpers.py  datajoint_fr_table_wrappers.py  datajoint_pool_table_base.py  datajoint_table_base.py  datajoint_table_helpers.py  delete_table_entries.py  drop_tables.py  edge_case_helpers.py  get_datajoint_table.py  metadata_helpers.py  nwbf_helpers.py  schema_helpers.py  trials_container_helpers.py  unpack_nwbf.py  write_get_datajoint_table.py
src/jguides_2024/edeno_decoder/: jguidera_edeno_decoder_error.py  jguidera_edeno_decoder_helpers.py  jguidera_edeno_decoder_run.py
src/jguides_2024/embedding/: embedding_params.py  umap_wrappers.py
src/jguides_2024/firing_rate_map/: jguidera_ppt_firing_rate_map.py  jguidera_well_arrival_departure_firing_rate_map.py  jguidera_well_arrival_firing_rate_map.py  sequential_rate_map_wrappers.py
src/jguides_2024/firing_rate_vector/: jguidera_firing_rate_difference_vector.py  jguidera_firing_rate_difference_vector_similarity.py  jguidera_firing_rate_difference_vector_similarity_ave.py  (+10 more)
(+100 files in other folders)
