[project]
name = "jguides_2024"
authors = [{ name = "Jen Guidera"}]
version = "0.0.1"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote_style = "double"

[tool.ruff.lint]
ignore = ["F401", "E402", "E501"]

